@@ -2,7 +2,6 @@ package com.researchspace.service.impl;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
 import com.researchspace.core.testutil.CoreTestUtils;
@@ -18,32 +17,21 @@ import com.researchspace.model.comms.NotificationType;
 import com.researchspace.model.record.Notebook;
 import com.researchspace.model.record.Record;
 import com.researchspace.service.EmailBroadcast;
-import com.researchspace.service.impl.EmailBroadcastImpl.EmailContent;
+import com.researchspace.service.EmailContent;
 import com.researchspace.testutils.SpringTransactionalTest;
 import com.researchspace.testutils.TestFactory;
-import io.github.resilience4j.ratelimiter.RateLimiter;
-import io.github.resilience4j.ratelimiter.RateLimiterConfig;
-import io.github.resilience4j.ratelimiter.RequestNotPermitted;
 import io.github.resilience4j.retry.RetryConfig;
 import jakarta.mail.AuthenticationFailedException;
 import jakarta.mail.IllegalWriteException;
 import jakarta.mail.MessagingException;
 import jakarta.mail.SendFailedException;
-import java.lang.annotation.Annotation;
-import java.time.Duration;
-import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
-import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.scheduling.annotation.Async;
 
 public class EmailBroadcastTest extends SpringTransactionalTest {
 
@@ -51,8 +39,8 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
 
   // Removes retries (which aren't tested in this class) from stubs to avoid waiting during tests
   abstract static class NoRetryBroadcasterStub extends EmailBroadcastImpl {
-    NoRetryBroadcasterStub(StrictEmailContentGenerator strictEmailContentGenerator) {
-      super(strictEmailContentGenerator);
+    NoRetryBroadcasterStub() {
+      super(5, 25);
     }
 
     @Override
@@ -61,73 +49,42 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
     }
   }
 
-  static class AuthFailureBroadcasterStub extends NoRetryBroadcasterStub {
-    AuthFailureBroadcasterStub(StrictEmailContentGenerator strictEmailContentGenerator) {
-      super(strictEmailContentGenerator);
+  static class FailingBroadcasterStub extends NoRetryBroadcasterStub {
+    private final MessagingException failure;
+
+    FailingBroadcasterStub(MessagingException failure) {
+      this.failure = failure;
     }
 
     @Override
     protected void sendMailToAddresses(EmailConfig config) throws MessagingException {
-      throw new AuthenticationFailedException("test auth failure");
-    }
-  }
-
-  static class SendFailureBroadcasterStub extends NoRetryBroadcasterStub {
-    SendFailureBroadcasterStub(StrictEmailContentGenerator strictEmailContentGenerator) {
-      super(strictEmailContentGenerator);
-    }
-
-    @Override
-    protected void sendMailToAddresses(EmailConfig config) throws MessagingException {
-      throw new SendFailedException("test send failure");
-    }
-  }
-
-  static class IllegalWriteFailureBroadcasterStub extends NoRetryBroadcasterStub {
-    IllegalWriteFailureBroadcasterStub(StrictEmailContentGenerator strictEmailContentGenerator) {
-      super(strictEmailContentGenerator);
-    }
-
-    @Override
-    protected void sendMailToAddresses(EmailConfig config) throws MessagingException {
-      throw new IllegalWriteException("test send failure");
+      throw failure;
     }
   }
 
   static class EmailSenderStub extends EmailBroadcastImpl {
-
-    EmailSenderStub(StrictEmailContentGenerator strictEmailContentGenerator) {
-      super(strictEmailContentGenerator);
-    }
-
     int messageCount = 0;
 
+    EmailSenderStub() {
+      super(5, 25);
+    }
+
     @Override
-    public void sendHtmlEmail(
-        String subj, EmailContent content, List<String> recipients, Communication comm) {
+    protected void sendMailToAddresses(EmailConfig config) {
       messageCount++;
     }
-
-    public EmailContent generateEmailBody(Communication comm) {
-      return EmailContent.builder().htmlContent("").build();
-    }
   }
 
-  private @Autowired StrictEmailContentGenerator strictEmailContentGenerator;
+  private @Autowired EmailContentGenerator emailContentGenerator;
 
-  private EmailBroadcastImpl broadcast;
+  private CommunicationEmailContentGenerator contentGenerator;
 
   @Before
-  public void setUp() throws Exception {
+  public void setUp() {
     // we need to explicitly create this, as it is only created by Spring in 'prod' profile
     // and these tests run in dev profile.
-    broadcast = new EmailBroadcastImpl(strictEmailContentGenerator);
-    broadcast.setHtmlDomainPrefix(BASEURL);
-    broadcast.init();
+    contentGenerator = new CommunicationEmailContentGenerator(emailContentGenerator, BASEURL);
   }
-
-  @After
-  public void tearDown() throws Exception {}
 
   @Test
   public void testGenerateEmailForSimpleMessage() {
@@ -137,10 +94,14 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
     Record record = TestFactory.createAnyRecord(sender);
     record.setId(1L);
     mor.setRecord(record);
-    EmailContent msgbody = broadcast.generateEmailBody(mor);
+    EmailContent msgbody = contentGenerator.generate(mor);
 
-    assertAllVelocityVarsReplaced(msgbody.getHtmlContent());
-    assertAllVelocityVarsReplaced(msgbody.getPlainTextContent().get());
+    assertEquals("RSpace message", msgbody.subject());
+    assertTrue(msgbody.htmlContent().contains(sender.getFullName()));
+    assertTrue(msgbody.htmlContent().contains(record.getName()));
+    assertTrue(msgbody.htmlContent().contains("message1"));
+    assertAllVelocityVarsReplaced(msgbody.htmlContent());
+    assertAllVelocityVarsReplaced(msgbody.plainTextContent());
   }
 
   private User createSender() {
@@ -164,11 +125,13 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
     MessageOrRequest mor = TestFactory.createAnyGroupRequest(sender, record, group);
     mor.setMessage("message1");
     record.setId(1L);
-    EmailContent msgbody = broadcast.generateEmailBody(mor);
+    EmailContent msgbody = contentGenerator.generate(mor);
 
-    assertAllVelocityVarsReplaced(msgbody.getHtmlContent());
-    assertTrue(
-        msgbody.getHtmlContent().contains(BASEURL + "/workspace/editor/structuredDocument/1"));
+    assertEquals("RSpace request", msgbody.subject());
+    assertTrue(msgbody.htmlContent().contains(sender.getFullName()));
+    assertTrue(msgbody.htmlContent().contains("message1"));
+    assertAllVelocityVarsReplaced(msgbody.htmlContent());
+    assertTrue(msgbody.htmlContent().contains(BASEURL + "/workspace/editor/structuredDocument/1"));
 
     // now try with a notebook and assert the link is different:
     assertNotebookLinkGenerated(sender, mor);
@@ -178,9 +141,9 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
     Notebook nb = TestFactory.createANotebook("any", sender);
     nb.setId(1L);
     mor.setRecord(nb);
-    EmailContent msgbody = broadcast.generateEmailBody(mor);
-    assertAllVelocityVarsReplaced(msgbody.getHtmlContent());
-    assertTrue(msgbody.getHtmlContent().contains(BASEURL + "/notebookEditor/1"));
+    EmailContent msgbody = contentGenerator.generate(mor);
+    assertAllVelocityVarsReplaced(msgbody.htmlContent());
+    assertTrue(msgbody.htmlContent().contains(BASEURL + "/notebookEditor/1"));
   }
 
   @Test
@@ -192,35 +155,22 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
 
     not.setRecord(record);
     record.setId(1L);
-    EmailContent msgbody = broadcast.generateEmailBody(not);
-    assertEquals(2, StringUtils.countMatches(msgbody.getHtmlContent(), "href"));
+    EmailContent msgbody = contentGenerator.generate(not);
+    assertEquals("RSpace notification", msgbody.subject());
+    assertEquals(2, StringUtils.countMatches(msgbody.htmlContent(), "href"));
+    assertTrue(msgbody.htmlContent().contains(sender.getFullName()));
+    assertTrue(msgbody.htmlContent().contains(record.getName()));
 
-    assertAllVelocityVarsReplaced(msgbody.getHtmlContent());
+    assertAllVelocityVarsReplaced(msgbody.htmlContent());
     // now try with a notebook and assert the link is different:
     assertNotebookLinkGenerated(sender, not);
 
     // now use a notification type that shouldn't include link to doc;
     not.setNotificationType(NotificationType.NOTIFICATION_DOCUMENT_DELETED);
-    msgbody = broadcast.generateEmailBody(not);
-    assertAllVelocityVarsReplaced(msgbody.getHtmlContent());
+    msgbody = contentGenerator.generate(not);
+    assertAllVelocityVarsReplaced(msgbody.htmlContent());
     // no record link
-    assertEquals(1, StringUtils.countMatches(msgbody.getHtmlContent(), "href"));
-  }
-
-  @Test
-  public void testEmailIsAnnotatedAsync() throws SecurityException, NoSuchMethodException {
-    Annotation asynch =
-        EmailBroadcast.class
-            .getMethod(
-                "sendHtmlEmail", String.class, EmailContent.class, List.class, Communication.class)
-            .getAnnotation(Async.class);
-    assertNotNull(asynch);
-
-    Annotation asynch2 =
-        EmailBroadcast.class
-            .getMethod("sendTextEmail", String.class, String.class, List.class, Communication.class)
-            .getAnnotation(Async.class);
-    assertNotNull(asynch2);
+    assertEquals(1, StringUtils.countMatches(msgbody.htmlContent(), "href"));
   }
 
   @Test
@@ -229,121 +179,43 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
     StringAppenderForTestLogging testStringAppender =
         CoreTestUtils.configureStringLogger(LogManager.getLogger(FailedEmailLogger.class));
 
-    AuthFailureBroadcasterStub broadcast =
-        new AuthFailureBroadcasterStub(strictEmailContentGenerator);
+    assertFailureLogged(
+        testStringAppender,
+        new AuthenticationFailedException("test auth failure"),
+        EmailBroadcastImpl.AUTHENTICATION_FAILURE_PREFIX);
+    assertFailureLogged(
+        testStringAppender,
+        new SendFailedException("test send failure"),
+        EmailBroadcastImpl.SEND_FAILURE_PREFIX);
+    assertFailureLogged(
+        testStringAppender,
+        new IllegalWriteException("test send failure"),
+        EmailBroadcastImpl.GENERAL_FAILURE_PREFIX);
+  }
+
+  private void assertFailureLogged(
+      StringAppenderForTestLogging appender, MessagingException failure, String expectedPrefix) {
+    appender.clearLog();
+    FailingBroadcasterStub broadcast = new FailingBroadcasterStub(failure);
     broadcast.init();
-    broadcast.sendHtmlEmail("any", anyHtmlBody(), Collections.emptyList(), null);
-    String firstMessage = testStringAppender.logContents;
+    broadcast.sendEmail(anyHtmlBody(), List.of("user@example.com"), null);
     assertTrue(
-        "unexpected content: " + firstMessage,
-        firstMessage.startsWith(EmailBroadcastImpl.AUTHENTICATION_FAILURE_PREFIX));
-
-    testStringAppender.clearLog();
-    SendFailureBroadcasterStub broadcast2 =
-        new SendFailureBroadcasterStub(strictEmailContentGenerator);
-    broadcast2.init();
-    broadcast2.sendHtmlEmail("any", anyHtmlBody(), Collections.emptyList(), null);
-    firstMessage = testStringAppender.logContents;
-    assertTrue(
-        "unexpected content: " + firstMessage,
-        firstMessage.startsWith(EmailBroadcastImpl.SEND_FAILURE_PREFIX));
-
-    testStringAppender.clearLog();
-    IllegalWriteFailureBroadcasterStub broadcast3 =
-        new IllegalWriteFailureBroadcasterStub(strictEmailContentGenerator);
-    broadcast3.init();
-    broadcast3.sendHtmlEmail("any", anyHtmlBody(), Collections.emptyList(), null);
-    firstMessage = testStringAppender.logContents;
-    assertTrue(
-        "unexpected content: " + firstMessage,
-        firstMessage.startsWith(EmailBroadcastImpl.GENERAL_FAILURE_PREFIX));
+        "unexpected content: " + appender.logContents,
+        appender.logContents.startsWith(expectedPrefix));
   }
 
   @Test
-  public void retryConfigDoesntRetryAuthenticationFailedException() {
-    RetryConfig cfg = broadcast.buildRetryConfig();
-    assertFalse(cfg.getExceptionPredicate().test(new AuthenticationFailedException()));
-    assertTrue(cfg.getExceptionPredicate().test(new MessagingException()));
-  }
+  public void disabledRecipientsAreNotEmailed() {
+    EmailSenderStub emailSender = new EmailSenderStub();
+    emailSender.init();
+    MessageOrRequest message = TestFactory.createAnyMessage(createSender());
+    User disabledRecipient = TestFactory.createAnyUser("disabled");
+    disabledRecipient.setEnabled(false);
+    message.setRecipients(Set.of(target(disabledRecipient)));
 
-  @Test
-  public void partitionEmailsByAddressLimit() {
-    // send in batches of 3, count how many distinct emails are made
-    EmailSenderStub senderTss = new EmailSenderStub(strictEmailContentGenerator);
-    senderTss.init();
-    senderTss.setAddressChunkSize(3);
+    broadcasterFor(emailSender).broadcast(message);
 
-    User sender = createSender();
-    MessageOrRequest mor = TestFactory.createAnyMessage(sender);
-    mor.setMessage("message1");
-    mor.setRecipients(createNAddresses(7));
-    senderTss.broadcast(mor);
-    assertEquals(3, senderTss.messageCount);
-
-    senderTss.messageCount = 0;
-    mor.setRecipients(createNAddresses(3));
-    senderTss.broadcast(mor);
-    assertEquals(1, senderTss.messageCount);
-    // nothing sent ifn
-    senderTss.messageCount = 0;
-    mor.setRecipients(createNAddresses(0));
-    senderTss.broadcast(mor);
-    assertEquals(0, senderTss.messageCount);
-  }
-
-  /*
-   * Set up a rate limiter that will only handle 2 requests, and won't wait
-   * for the tokens to renew. We attempt to send 3 emails, 3rd one throws exception
-   */
-  @Test
-  public void rateLimiterTestFailure() throws Exception {
-    EmailSenderStub senderTss = new EmailSenderStub(strictEmailContentGenerator);
-    senderTss.init();
-    senderTss.setAddressChunkSize(3);
-
-    RateLimiterConfig cfg =
-        RateLimiterConfig.custom()
-            .limitForPeriod(2)
-            .limitRefreshPeriod(Duration.of(100, ChronoUnit.MILLIS))
-            .timeoutDuration(Duration.of(1, ChronoUnit.MILLIS))
-            .build();
-    RateLimiter rl = RateLimiter.of("emailLimiter", cfg);
-    senderTss.setRateLimiter(rl); // max 2 per 100 millis for testing
-    User sender = createSender();
-    MessageOrRequest mor = TestFactory.createAnyMessage(sender);
-    mor.setMessage("message1");
-    mor.setRecipients(createNAddresses(7));
-    assertExceptionThrown(() -> senderTss.broadcast(mor), RequestNotPermitted.class);
-  }
-
-  // in this test, we allow a timeout duration long enough to allow tokens to refresh
-  @Test
-  public void rateLimiterTestSuccess() throws Exception {
-    EmailSenderStub senderTss = new EmailSenderStub(strictEmailContentGenerator);
-    senderTss.init();
-    senderTss.setAddressChunkSize(3);
-
-    RateLimiterConfig cfg =
-        RateLimiterConfig.custom()
-            .limitForPeriod(2)
-            .limitRefreshPeriod(Duration.of(100, ChronoUnit.MILLIS))
-            .timeoutDuration(Duration.of(1000, ChronoUnit.MILLIS))
-            .build();
-    RateLimiter rl = RateLimiter.of("emailLimiter", cfg);
-    senderTss.setRateLimiter(rl); // max 2 per 100 millis for testing
-    User sender = createSender();
-    MessageOrRequest mor = TestFactory.createAnyMessage(sender);
-    mor.setMessage("message1");
-    mor.setRecipients(createNAddresses(7));
-    senderTss.broadcast(mor);
-    assertEquals(3, senderTss.messageCount);
-  }
-
-  private Set<CommunicationTarget> createNAddresses(int numAddresses) {
-    return IntStream.range(0, numAddresses)
-        .mapToObj(i -> TestFactory.createAnyUser(getRandomAlphabeticString("i")))
-        .map(this::target)
-        .collect(Collectors.toSet());
+    assertEquals(0, emailSender.messageCount);
   }
 
   CommunicationTarget target(User recipient) {
@@ -353,6 +225,10 @@ public class EmailBroadcastTest extends SpringTransactionalTest {
   }
 
   private EmailContent anyHtmlBody() {
-    return EmailContent.builder().htmlContent("<p>body</p>").plainTextContent("body").build();
+    return new EmailContent("subject", "<p>body</p>", "body");
+  }
+
+  private CommunicationEmailBroadcaster broadcasterFor(EmailBroadcast emailSender) {
+    return new CommunicationEmailBroadcaster(emailSender, emailContentGenerator, BASEURL);
   }
 }
